<resources>
    <string name="app_name">Activity</string>
    <string name="label学号姓名">2411644邱志成 第一个页面</string>
    <string name="first_layout_button_1">跳转到第二个页面（显式）</string>
    <string name="first_layout_button_2">跳转到第二个页面（隐式）</string>
    <string name="first_layout_button_3">打开百度引擎（使用intent）</string>
    <string name="first_layout_button_4">打电话给自己（使用intent）</string>
    <string name="first_layout_button_5">切换图片</string>
    <string name="second_layout_button_1">跳转到第一个页面（显式）</string>
    <string name="second_layout_button_2">跳转到第三个页面（显式）</string>
    <string name="edit_text">请输入内容</string>
    <string name="show_input_button">显示输入内容（使用Toast）</string>
    <string name="dialog_button">点我跳出弹窗</string>
    <string name="third_layout_button1">跳转到第一个页面（显式）</string>
    <string name="third_layout_button2">跳转到第二个页面（显式）</string>
    <string name="instrument_name">乐器名</string>
    <string name="create_database">创建数据库</string>
    <string name="update_data">更新数据</string>
</resources>