<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/second_layout_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_layout_button_1" />

    <Button
        android:id="@+id/second_layout_button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_layout_button_2" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text" />
    <Button
        android:id="@+id/show_input_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_input_button"
        android:textAllCaps="false" />
    <Button
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button"/>
    <Button
        android:id="@+id/create_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_database" />

</LinearLayout>